// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connection Resolver Correctly Resolves Create Cloud Connection 1`] = `
Object {
  "data": Object {
    "createCloudConnection": Object {
      "kind": "Secret",
      "statusCode": 201,
    },
  },
}
`;

exports[`Connection Resolver Correctly Resolves Create Cloud Connection Error 1`] = `
Object {
  "data": Object {
    "createCloudConnection": Object {
      "code": 409,
      "kind": "Status",
      "statusCode": 409,
    },
  },
}
`;

exports[`Connection Resolver Correctly Resolves Delete Cloud Connection 1`] = `
Object {
  "data": Object {
    "deleteCloudConnection": "204",
  },
}
`;

exports[`Connection Resolver Correctly Resolves Edit Cloud Connection 1`] = `
Object {
  "data": Object {
    "editCloudConnection": Object {
      "kind": "Secret",
      "statusCode": 200,
    },
  },
}
`;

exports[`Connection Resolver Correctly Resolves Edit Cloud Connection Error 1`] = `
Object {
  "data": Object {
    "editCloudConnection": Object {
      "code": 409,
      "kind": "Status",
      "statusCode": 409,
    },
  },
}
`;

exports[`Connection Resolver Correctly Resolves Get Cloud Connection Details 1`] = `
Object {
  "data": Object {
    "connectionDetails": Array [
      Object {
        "metadata": Object {
          "awsAccessKeyID": "aws-access-key-id",
          "awsSecretAccessKeyID": "aws-secret-access-key-id",
          "isOcp": true,
          "pullSecret": "{\\"not\\":\\"a\\",\\"real\\":\\"pull\\",\\"secret\\":\\"!\\"}",
          "sshPrivatekey": "ssh-private-key",
          "sshPublickey": "ssh-public-key",
        },
        "name": "aws",
        "namespace": "default",
        "provider": "aws",
      },
      Object {
        "metadata": Object {
          "gcProjectID": "gcp-project",
          "gcServiceAccountKey": "{\\"fake\\":\\"json\\",\\"key\\":\\"haha!\\"}",
          "isOcp": true,
          "pullSecret": "{\\"pull\\":\\"secret\\"}",
          "sshPrivatekey": "ssh-private-key-for-google",
          "sshPublickey": "google-public-key",
        },
        "name": "google",
        "namespace": "hive",
        "provider": "gke",
      },
      Object {
        "metadata": Object {
          "baseDomainResourceGroupName": "acm.microsoft.io",
          "isOcp": true,
          "osServicePrincipal": "{\\"fake\\":\\"json\\"}",
          "pullSecret": "{\\"my\\":\\"pull\\",\\"secret\\":\\"nothing\\"}",
          "sshPrivatekey": "msft-private-key",
          "sshPublickey": "msft-public-key",
        },
        "name": "microsoft",
        "namespace": "ocm",
        "provider": "aks",
      },
      Object {
        "metadata": Object {
          "awsAccessKeyID": "aws-access-key-id",
          "awsSecretAccessKeyID": "aws-secret-access-key-id",
          "isOcp": true,
          "pullSecret": "{\\"not\\":\\"a\\",\\"real\\":\\"pull\\",\\"secret\\":\\"!\\"}",
          "sshPrivatekey": "ssh-private-key",
          "sshPublickey": "ssh-public-key",
        },
        "name": "aws",
        "namespace": "default",
        "provider": "aws",
      },
      Object {
        "metadata": Object {
          "gcProjectID": "gcp-project",
          "gcServiceAccountKey": "{\\"fake\\":\\"json\\",\\"key\\":\\"haha!\\"}",
          "isOcp": true,
          "pullSecret": "{\\"pull\\":\\"secret\\"}",
          "sshPrivatekey": "ssh-private-key-for-google",
          "sshPublickey": "google-public-key",
        },
        "name": "google",
        "namespace": "hive",
        "provider": "gke",
      },
      Object {
        "metadata": Object {
          "baseDomainResourceGroupName": "acm.microsoft.io",
          "isOcp": true,
          "osServicePrincipal": "{\\"fake\\":\\"json\\"}",
          "pullSecret": "{\\"my\\":\\"pull\\",\\"secret\\":\\"nothing\\"}",
          "sshPrivatekey": "msft-private-key",
          "sshPublickey": "msft-public-key",
        },
        "name": "microsoft",
        "namespace": "ocm",
        "provider": "aks",
      },
    ],
  },
}
`;

exports[`Connection Resolver Correctly Resolves Get Cloud Connections 1`] = `
Object {
  "data": Object {
    "connections": Array [
      Object {
        "errorMsg": null,
        "metadata": Object {
          "name": "aws",
          "name_namespace": "awsdefault",
          "namespace": "default",
          "provider": "aws",
        },
        "statusCode": null,
      },
      Object {
        "errorMsg": null,
        "metadata": Object {
          "name": "google",
          "name_namespace": "googlehive",
          "namespace": "hive",
          "provider": "gke",
        },
        "statusCode": null,
      },
      Object {
        "errorMsg": null,
        "metadata": Object {
          "name": "microsoft",
          "name_namespace": "microsoftocm",
          "namespace": "ocm",
          "provider": "aks",
        },
        "statusCode": null,
      },
      Object {
        "errorMsg": null,
        "metadata": Object {
          "name": "aws",
          "name_namespace": "awsdefault",
          "namespace": "default",
          "provider": "aws",
        },
        "statusCode": null,
      },
      Object {
        "errorMsg": null,
        "metadata": Object {
          "name": "google",
          "name_namespace": "googlehive",
          "namespace": "hive",
          "provider": "gke",
        },
        "statusCode": null,
      },
      Object {
        "errorMsg": null,
        "metadata": Object {
          "name": "microsoft",
          "name_namespace": "microsoftocm",
          "namespace": "ocm",
          "provider": "aks",
        },
        "statusCode": null,
      },
    ],
  },
}
`;
